--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Zig
-        run: snap install zig --classic --${{matrix.zig}}
+        run: sudo snap install zig --classic --${{matrix.zig}}
 
       - run: zig version
       - run: zig test **/*_test.zig
