Add cron schedule
Also remove a copypasta env thing (oops)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: Test
 
 on: 
   push:
+  schedule:
+    - cron: "0 2 * * 0"
 
 jobs:
-  lint:
-    env:
-      GH_TOKEN: ${{secrets.GH_TOKEN}}
+  test:
     runs-on: ubuntu-latest
     name: Test ${{matrix.zig}}
     strategy:
