--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,14 @@ name: Test
 
 on: 
   push:
+    branches:
+      - master
+      - "[0-9]+-[0-9]+-stable"
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+
+  pull_request:
+    branches:
+      - master
   schedule:
     - cron: "0 2 * * 0"
 
@@ -10,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Test ${{matrix.zig}}
     strategy:
+      fail-fast: false
       matrix:
         zig:
           - "beta"
